# pension_calc

./: pyproject.toml
calculate_pension/: manage.py
calculate_pension/calculate_pension/: asgi.py  settings.py  urls.py  wsgi.py
