[tool.poetry]
name = "pension-calc"
version = "0.1.0"
description = ""
authors = ["Ruslan2512 <ruslansirenko25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
